[package]
name = "proxy_tests"
version = "0.1.0"
authors = ["shirshak <shirshak55@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.7"
reqwest = "0.10.8"
tokio = { version ="0.2", features=["full"] }
